# haremovie

./: README.md
agent/: .gitignore  README.md  pyproject.toml
agent/haremovie_agent/: .env.sample  agent.py  callback.py  generate_image_synthesis.py  generate_video.py  generate_virtual_try_on.py  requirements.txt  storage.py  utils.py
api/: .dockerignore  .env.sample  .gcloudignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
api/gcloud/: .env.sample  deploy.sh
api/migrations/: env.py
api/migrations/versions/: 45320bc81332_create_tables.py  59fc354109f1_create_tables.py
api/src/haremovie_api/: db.py  models.py  requests.py  responses.py  server.py  storage.py  worker.py
diagram/: main.py  pyproject.toml
infra/: .gitignore  README.md  main.tf  provider.tf  secrets.yaml.example  terraform.tfvars.example  variables.tf
infra/modules/artifact-registry/: artifact-registry.tf
infra/modules/cloud-sql/: cloud-sql.tf
infra/modules/cloud-tasks/: cloud-tasks.tf
infra/modules/required-api/: required-api.tf
infra/modules/secrets-manager/: secrets-manager.tf
infra/modules/service-accounts/: service-accounts.tf
infra/modules/storage/: storage.tf
web/: .dockerignore  Dockerfile  README.md  cloudbuild.yaml  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
web/src/: index.css
web/src/components/: ImageUpload.tsx  ProgressIndicator.tsx  SampleGallery.tsx  VideoPreview.tsx
web/src/components/ui/: button.tsx
web/src/lib/: api.ts
web/src/pages/: Index.tsx
